--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "astro": "^5.13.3",
     "clsx": "^2.1.1",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^4.1.12",
+    "vanilla-cookieconsent": "^3.1.0"
   },
   "devDependencies": {
     "@astrojs/sitemap": "^3.5.1",
